--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <title>I am a title!</title>
     
   </head>
-  
+    <head>
+        <title>My awesome web page</title>
+    </head>
+
   <body>
     
 Hello there, awesome person!
